AWS Q Transform modifications