@@ -37,7 +37,8 @@ import org.mockserver.model.HttpRequest;
 
 import static com.adobe.aio.util.Constants.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mockConstruction;
+import static org.mockito.Mockito.when;
 import static org.mockserver.model.HttpRequest.*;
 import static org.mockserver.model.HttpResponse.*;
 import static org.mockserver.model.HttpStatusCode.*;
@@ -66,7 +67,7 @@ public class TenantTest extends AbstractApiTest {
     HttpRequest list = request().withMethod("GET").withHeader(API_KEY_HEADER, sessionId).withPath("/api/tenants");
     client.when(list).respond(response().withStatusCode(NOT_FOUND_404.code()));
     CloudManagerApiException exception = assertThrows(CloudManagerApiException.class, underTest::list, "Exception thrown for 404");
-    assertEquals(String.format("Cannot retrieve tenants: %s/api/tenants (404 Not Found).", baseUrl), exception.getMessage(), "Message was correct");
+    assertEquals("Cannot retrieve tenants: %s/api/tenants (404 Not Found).".formatted(baseUrl), exception.getMessage(), "Message was correct");
     client.verify(list);
     client.clear(list);
   }
@@ -78,7 +79,7 @@ public class TenantTest extends AbstractApiTest {
     HttpRequest list = request().withMethod("GET").withHeader(API_KEY_HEADER, sessionId).withPath("/api/tenants");
     client.when(list).respond(response().withStatusCode(FORBIDDEN_403.code()).withBody(json("{ \"error_code\":\"1234\", \"message\":\"some message\" }")));
     CloudManagerApiException exception = assertThrows(CloudManagerApiException.class, underTest::list, "Exception thrown for 403");
-    assertEquals(String.format("Cannot retrieve tenants: %s/api/tenants (403 Forbidden) - Detail: some message (Code: 1234).", baseUrl), exception.getMessage(), "Message was correct");
+    assertEquals("Cannot retrieve tenants: %s/api/tenants (403 Forbidden) - Detail: some message (Code: 1234).".formatted(baseUrl), exception.getMessage(), "Message was correct");
     client.verify(list);
     client.clear(list);
   }
@@ -90,7 +91,7 @@ public class TenantTest extends AbstractApiTest {
     HttpRequest list = request().withMethod("GET").withHeader(API_KEY_HEADER, sessionId).withPath("/api/tenants");
     client.when(list).respond(response().withStatusCode(FORBIDDEN_403.code()).withBody(json("{ \"message\":\"some message\" }")));
     CloudManagerApiException exception = assertThrows(CloudManagerApiException.class, underTest::list, "Exception thrown for 403");
-    assertEquals(String.format("Cannot retrieve tenants: %s/api/tenants (403 Forbidden) - Detail: some message.", baseUrl), exception.getMessage(), "Message was correct");
+    assertEquals("Cannot retrieve tenants: %s/api/tenants (403 Forbidden) - Detail: some message.".formatted(baseUrl), exception.getMessage(), "Message was correct");
     client.verify(list);
     client.clear(list);
   }
@@ -102,7 +103,7 @@ public class TenantTest extends AbstractApiTest {
     HttpRequest list = request().withMethod("GET").withHeader(API_KEY_HEADER, sessionId).withPath("/api/tenants");
     client.when(list).respond(response().withStatusCode(FORBIDDEN_403.code()).withBody(json("{ \"error_code\":\"1234\" }")));
     CloudManagerApiException exception = assertThrows(CloudManagerApiException.class, underTest::list, "Exception thrown for 403");
-    assertEquals(String.format("Cannot retrieve tenants: %s/api/tenants (403 Forbidden).", baseUrl), exception.getMessage(), "Message was correct");
+    assertEquals("Cannot retrieve tenants: %s/api/tenants (403 Forbidden).".formatted(baseUrl), exception.getMessage(), "Message was correct");
     client.verify(list);
     client.clear(list);
   }
@@ -139,7 +140,7 @@ public class TenantTest extends AbstractApiTest {
     HttpRequest get = request().withMethod("GET").withHeader(API_KEY_HEADER, sessionId).withPath("/api/tenant/1");
     client.when(get).respond(response().withStatusCode(NOT_FOUND_404.code()));
     CloudManagerApiException exception = assertThrows(CloudManagerApiException.class, () -> underTest.get("1"), "Exception thrown for 404");
-    assertEquals(String.format("Cannot retrieve tenant: %s/api/tenant/1 (404 Not Found).", baseUrl), exception.getMessage(), "Message was correct");
+    assertEquals("Cannot retrieve tenant: %s/api/tenant/1 (404 Not Found).".formatted(baseUrl), exception.getMessage(), "Message was correct");
     client.verify(get);
     client.clear(get);
   }
